# typed-sled

./: .gitignore  Cargo.toml  README.md
benches/: bench_cached.rs  serialize.rs
examples/: advanced_search.rs  basic.rs  basic_search.rs  custom_serde.rs  key_generating.rs  rkyv.rs
src/: cached.rs  convert.rs  key_generating.rs  lib.rs  search.rs  serialize.rs  transaction.rs
src/custom_serde/: convert.rs  key_generating.rs  mod.rs  search.rs  serialize.rs
