[package]
name = "typed-sled"
description = "Sled but with types instead of bytes."
version = "0.1.14"
edition = "2018"
license = "MIT"
repository = "https://github.com/chronicl/typed-sled"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34"
serde = {version = "1", features=["derive"]}
bincode = "1"
async-trait = "0.1"
rkyv = "0.7.23"

[features]
convert = []
key-generating = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "serialize"
harness = false